syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_account.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/nicodanke/inventapp_v2/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "InventApp API";
        version: "1.0";
        contact: {
            name: "Nicol√°s Dankiewicz";
            url: "https://github.com/nicodanke/inventapp_v2";
            email: "nicodanki@hotmail.com";
        };
    };
};

service InventApp {
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {
        option (google.api.http) = {
            post: "/v1/accounts"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Allow to create a new account and base user and configurations";
            summary: "Create Account"
        };  
    }
}